<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_Deque" Id="{351f3076-c739-0dd7-09a9-eb6079709862}" SpecialFunc="None">
    <Declaration><![CDATA[// (Pronounced Deck) Double ended queue. A collection that supports the insertion and removal of items at the front and back.
{attribute 'enable_dynamic_creation'}
{attribute 'no_assign'}
{attribute 'no_explicit_call' := 'direct call for this function block is not allowed'}
FUNCTION_BLOCK FB_Deque IMPLEMENTS I_Deque//, I_Enumerable, I_Copyable
VAR
	fbList : FB_List := ();
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Property Name="_Count" Id="{c6511b0f-fcf0-0d32-0287-b8d19dced758}">
      <Declaration><![CDATA[// Number of items in the collection.
PROPERTY _Count : T_Capacity]]></Declaration>
      <Get Name="Get" Id="{5efbba5f-282e-0822-0fe3-0524a7ba2760}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[_Count := THIS^.fbList._Count;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="_Empty" Id="{deb6955b-c8b5-0f4c-106b-1c7debabd68b}">
      <Declaration><![CDATA[// Checks if collection is empty.
PROPERTY _Empty : BOOL]]></Declaration>
      <Get Name="Get" Id="{0f96b0d5-96aa-0042-3415-be6ec6646418}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[_Empty := THIS^.fbList._Empty;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="_Error_Status" Id="{570be552-aa82-057c-384f-6b230c1e86ce}">
      <Declaration><![CDATA[// Error status of the collection.
PROPERTY _Error_Status : T_Error]]></Declaration>
      <Get Name="Get" Id="{c52def3c-90e9-0454-33b3-13af05208fe0}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[_Error_Status := THIS^.fbList._Error_Status;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="_Values" Id="{85cfff8b-3897-0ab8-2b6a-2a60780cf13f}">
      <Declaration><![CDATA[// Gets an immutable list of the items in Deque.
PROPERTY _Values : I_Immutable_List]]></Declaration>
      <Get Name="Get" Id="{03fb7db4-8731-01ff-20c3-0bba100a2a13}">
        <Declaration><![CDATA[VAR_INST
	fbImmutable_List : FB_Immutable_List := (ipList := THIS^.fbList);
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[_Values := fbImmutable_List;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Back" Id="{599ca234-38a3-018e-1a70-6ed57a737050}">
      <Declaration><![CDATA[// Get item at the back of the deque without removing it.
METHOD Back : I_Deque
VAR_INPUT
	Item : ANY; // Variable to store returned item value
END_VAR
VAR_OUTPUT
	bSuccess : BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[Back := THIS^;

THIS^.fbList.Get(THIS^.fbList._Count - 1, Item, bSuccess => bSuccess);]]></ST>
      </Implementation>
    </Method>
    <Method Name="Clear" Id="{1c5cc2ef-fd91-03ea-373e-2f2517852da8}">
      <Declaration><![CDATA[// Empties/Clears/Deletes every item in the deque.
METHOD Clear : I_Deque
]]></Declaration>
      <Implementation>
        <ST><![CDATA[Clear := THIS^;

THIS^.fbList.Clear();]]></ST>
      </Implementation>
    </Method>
    <Method Name="Dequeue_At_Back" Id="{746d79ad-b058-0f22-39fd-85446b9bf825}">
      <Declaration><![CDATA[// Removes item at the front of the deque.
METHOD Dequeue_At_Back : I_Deque
VAR_OUTPUT
	bSuccess : BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[Dequeue_At_Back := THIS^;

THIS^.fbList.Remove_Last(bSuccess => bSuccess);]]></ST>
      </Implementation>
    </Method>
    <Method Name="Dequeue_At_Front" Id="{9dc29b1c-5de2-0712-0343-0e3c43281b8f}">
      <Declaration><![CDATA[// Removes item at the front of the deque.
METHOD Dequeue_At_Front : I_Deque
VAR_OUTPUT
	bSuccess : BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[Dequeue_At_Front := THIS^;

THIS^.fbList.Remove_At(0, bSuccess => bSuccess);]]></ST>
      </Implementation>
    </Method>
    <Method Name="Enqueue_At_Back" Id="{85ac7f7a-53dc-0a9a-1ac5-20c8841891a5}">
      <Declaration><![CDATA[// Adds item at the back of the deque.
METHOD Enqueue_At_Back : I_Deque
VAR_INPUT
	Item : ANY; // Item to store.
END_VAR
VAR_OUTPUT
	bSuccess : BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[Enqueue_At_Back := THIS^.Enqueue_Generic(Item, FALSE,bSuccess => bSuccess);]]></ST>
      </Implementation>
    </Method>
    <Method Name="Enqueue_At_Front" Id="{d09d1546-7fce-083f-3a44-1feb692b5bf9}">
      <Declaration><![CDATA[// Add item to the front of the deque.
METHOD Enqueue_At_Front : I_Deque
VAR_INPUT
	Item : ANY; // Item to store.
END_VAR
VAR_OUTPUT
	bSuccess : BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[Enqueue_At_Front := THIS^.Enqueue_Generic(Item, TRUE,bSuccess => bSuccess);]]></ST>
      </Implementation>
    </Method>
    <Method Name="Enqueue_Generic" Id="{4e2f6c57-dbf4-07d7-220f-cbe2a1eef027}">
      <Declaration><![CDATA[// Adds a generic item at the back of the deque.
METHOD Enqueue_Generic : I_Deque
VAR_INPUT
	Item : T_Generic; // Item to store.
	bAt_Front : BOOL; // Enqueues at front if set to TRUE.
END_VAR
VAR_OUTPUT
	bSuccess : BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[Enqueue_Generic := THIS^;

IF bAt_Front THEN
	THIS^.fbList.Insert_Generic(0, Item, bSuccess => bSuccess);
ELSE
	THIS^.fbList.Insert_Generic(THIS^.fbList._Count, Item, bSuccess => bSuccess);
	END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Front" Id="{cafe8b46-1153-0694-10d8-0d7282325cde}">
      <Declaration><![CDATA[// Get item at the front of the deque without removing it.
METHOD Front : I_Deque
VAR_INPUT
	Item : ANY; // Variable to store returned item value
END_VAR
VAR_OUTPUT
	bSuccess : BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[Front := THIS^;

THIS^.fbList.Get(0, Item, bSuccess => bSuccess);]]></ST>
      </Implementation>
    </Method>
    <Method Name="Reverse" Id="{87f39b4d-0c4a-081e-24bd-fd59a4926ef4}">
      <Declaration><![CDATA[// Reverses the order of items in the deque.
METHOD Reverse : I_Deque
VAR_OUTPUT
	bSuccess : BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[Reverse := THIS^;

THIS^.fbList.Reverse(bSuccess => bSuccess);]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>